# ft_greedy_subliminal_learning

./: .gitignore  README.md  We are not seeing response rate for FT Greedy.ipynb  eval_student.py  fine_tune_student.py  generate_dataset.py  pyproject.toml  setup.py
datasets/: otter_greedy.jsonl
sl_eval_out/: sl_trained_10_epochs.jsonl
subliminal-learning/: .env.template  CLAUDE.md  README.md  README_v2.md
subliminal-learning/.claude/: settings.local.json
subliminal-learning/sl/: config.py
