[project]
name = "emergent-misalignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "backoff>=2.2.1",
    "bitsandbytes>=0.46.1",
    "fire>=0.7.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "joblib>=1.5.2",
    "matplotlib>=3.10.6",
    "more-itertools>=10.8.0",
    "natsort>=8.4.0",
    "orjson>=3.11.4",
    "pandas>=2.3.1",
    "peft>=0.17.0",
    "sl",
    "torchao>=0.13.0",
    "torchtune>=0.6.1",
    "trl==0.21.0",
    "unsloth==2025.12.4",
    "vllm>=0.10.0",
]

[tool.uv.workspace]
members = [
    "find_divergence_tokens",
    "subliminal-learning",
]

[tool.uv.sources]
sl = { workspace = true }
